<resources>

    <string name="app_name">GolfBook</string>

    <string name="emptyNameHeader1">Salut le petit nouveau ! Choisis-toi un nom !</string>
    <string name="emptyNameHeader2">On ne se connait pas ? Comment tu veux t\'appeler ?</string>

    <string-array name="emptyNameHeader">
        <item>@string/emptyNameHeader1</item>
        <item>@string/emptyNameHeader2</item>
    </string-array>

    <string name="knownNameHeader1">Encore toi ? Ton nom te plaît toujours ?</string>
    <string name="knownNameHeader2">Franchement tu peux faire mieux… Choisis un nouveau nom !</string>

    <string-array name="knownNameHeader">
        <item>@string/knownNameHeader1</item>
        <item>@string/knownNameHeader2</item>
    </string-array>

    <string name="playerReady1"> est prêt à en découdre</string>
    <string name="playerReady2"> va rafler la mise</string>
    <string name="playerReady3"> est là pour remporter la victoire</string>
    <string name="playerReady4"> attend les retardataires</string>
    <string name="playerReady5"> n\'est pas là pour rigoler</string>
    <string name="playerReady6"> est prêt pour la gloire</string>

    <string-array name="playerReadyArray">
        <item>@string/playerReady1</item>
        <item>@string/playerReady2</item>
        <item>@string/playerReady3</item>
        <item>@string/playerReady4</item>
        <item>@string/playerReady5</item>
        <item>@string/playerReady6</item>
    </string-array>


    <string name="nameEditText">Entrez votre nom</string>
    <string name="btnUpdatePlayer">Changer l\'avatar</string>
    <string name="btnAddCourse">Ajouter un parcours</string>
    <string name="btnManageOtherPlayer">+</string>
    <string name="scoreString">Score</string>
    <string name="validate">Valider</string>
    <string name="choosePlayerError">Veuillez remplir correctement les informations</string>
    <string name="playersTitle">Joueurs :</string>
    <string name="courseTitle">Parcours :</string>
    <string name="startGame">Commencer la partie</string>
    <string name="loungeName">Salon %1$s</string>
    <string name="emptyCourse">Veuillez choisir un parcours</string>
    <string name="emptyLounge">Le salon choisit est vide</string>
    <string name="lonelyPlayer">Vous ne pouvez pas jouer tout seul</string>
    <string name="joinLounge">Rejoindre</string>
    <string name="player_id_key">playerId</string>
    <string name="btnSeeCourses">Voir les parcours</string>
    <string name="createCourseTitle">Créé ton parcours</string>
    <string name="courseNameHint">Nom du parcours</string>
    <string name="btn18holes">18 trous</string>
    <string name="btn9holes">9 trous</string>
    <string name="hole1">Trou n°1</string>
    <string name="hole2">Trou n°2</string>
    <string name="hole3">Trou n°3</string>
    <string name="invalidCourse">Veuillez remplir correctement le parcours</string>
    <string name="numberGamePlayed">Nombre de parties jouées : </string>
    <string name="numberOfHoles">Nombre de trous : </string>
    <string name="parNumber">Par : </string>
    <string name="holeNumber">Trou n° %1$d : </string>

    <string name="starting_dialog_title">La partie va commencer</string>
    <string name="starting_dialog_message">Êtes vous prêt ?</string>
    <string name="starting_dialog_decline">Non</string>
    <string name="starting_dialog_accept">Oui</string>
    <string name="joinGame">Rejoindre la partie</string>
    <string name="hole">Trou</string>
    <string name="par">Par</string>
    <string name="hole_input_title">Quel score a été fait ?</string>
</resources>