<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="80dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/scoreboardHoleNumberTitle"
        style="@style/TextAppearance.GolfBook.TextInputLayout.HintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hole"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreboardHoleNumber"
        style="@style/TextAppearance.GolfBook.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreboardHoleNumberTitle"
        tools:text="14" />

    <View
        android:id="@+id/delimiter1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/scoreboardHoleParTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreboardHoleNumber" />

    <TextView
        android:id="@+id/scoreboardHoleParTitle"
        style="@style/TextAppearance.GolfBook.TextInputLayout.HintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/par"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delimiter1" />

    <TextView
        android:id="@+id/scoreboardHolePar"
        style="@style/TextAppearance.GolfBook.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreboardHoleParTitle"
        tools:text="3" />

    <View
        android:id="@+id/delimiter2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/scoreboardScoreTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreboardHolePar" />

    <TextView
        android:id="@+id/scoreboardScoreTitle"
        style="@style/TextAppearance.GolfBook.TextInputLayout.HintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scoreString"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delimiter2" />


    <!-- <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputScore"
        style="@style/Widget.GolfBook.TextInputLayoutScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreboardScoreTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="22sp"
            tools:text="test"
            android:gravity="center"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout> -->

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"
        android:textSize="24sp"
        android:gravity="center"
        style="@style/TextAppearance.GolfBook.TextInputLayout.HintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreboardScoreTitle"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:text="4"
        />


</androidx.constraintlayout.widget.ConstraintLayout>