<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/chooseNameTitle"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.GolfBook.Guidelines"
        android:layout_marginTop="120dp"
        android:text="@string/emptyNameHeader1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.GolfBook.TextInputLayout"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseNameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/man1"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.GolfBook.Body1"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageAvatar"
        app:layout_constraintStart_toStartOf="@+id/imageAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imageAvatar"
        tools:text="Patrick" />

    <Button
        android:id="@+id/btnValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.GolfBook.Button"
        android:layout_marginBottom="36dp"
        android:text="@string/validate"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageAvatar" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="48dp"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <ImageView
            android:id="@+id/man1View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man1"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/man2View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man2"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/man3View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man3"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/man4View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man4"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/man5View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man5"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/man6View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man6"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/man7View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man7"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/man8View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/man8"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman1View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman1"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman2View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman2"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman3View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman3"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman4View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman4"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman5View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman5"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman6View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman6"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman7View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman7"
            android:onClick="updateAvatar"/>

        <ImageView
            android:id="@+id/woman8View"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:src="@drawable/woman8"
            android:onClick="updateAvatar"/>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>